Upgrade @angular 2.0.2 + material design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>Angular2 & Firebase</h1>
-
-<h3>Trainings</h3>
+<md-toolbar [color]="'primary'">
+  <span>Angular2 & Angular-CLI & Material2 & Firebase & Angularfire2</span>
+</md-toolbar>
 
 <app-trainings></app-trainings>
